--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FBC02D">
+    android:background="#FBC02D"
+    android:id="@+id/activity_splash">
 
     <ImageView
         android:layout_width="wrap_content"
