--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,3 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <style name="Theme.FoodDelivery.Custom" parent="Theme.FoodDelivery">
+<!--        <item name="bottomSheetDialogTheme">@style/CustomBottomSheetDialog</item>-->
+    </style>
+
+    <style name="CustomBottomSheetDialog" parent="Theme.Design.Light.BottomSheetDialog">
+        <item name="bottomSheetStyle">@style/CustomModalStyle</item>
+    </style>
+
+    <style name="CustomModalStyle" parent="Widget.Design.BottomSheet.Modal">
+        <item name="android:background">@drawable/round_top_bg_white</item>
+    </style>
+
+    <style name="Theme.FoodDelivery.CardView.TopRounded" parent="@style/Widget.MaterialComponents.CardView">
+        <item name="shapeAppearanceOverlay">@style/CardView.TopRounded</item>
+    </style>
+
+    <style name="CardView.TopRounded" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSizeTopRight">20dp</item>
+        <item name="cornerSizeTopLeft">20dp</item>
+        <item name="cornerSizeBottomRight">0dp</item>
+        <item name="cornerSizeBottomLeft">0dp</item>
+    </style>
+
+    <style name="Theme.FoodDelivery.CardView.BottomRounded" parent="CardView">
+        <item name="shapeAppearanceOverlay">@style/CardView.BottomRounded</item>
+    </style>
+
+    <style name="CardView.BottomRounded" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSizeTopRight">0dp</item>
+        <item name="cornerSizeTopLeft">0dp</item>
+        <item name="cornerSizeBottomRight">15dp</item>
+        <item name="cornerSizeBottomLeft">15dp</item>
+    </style>
+
+    <style name="Theme.FoodDelivery.TabLayout" parent="Widget.Design.TabLayout">
+        <item name="enforceMaterialTheme">true</item>
+        <item name="enforceTextAppearance">true</item>
+        <item name="android:background">?attr/colorSurface</item>
+        <item name="tabIconTint">@color/tab_selector</item>
+        <item name="tabIndicatorAnimationDuration">@integer/mtrl_tab_indicator_anim_duration_ms</item>
+        <item name="tabIndicatorColor">@color/app_primary</item>
+        <item name="tabTextAppearance">@android:style/TextAppearance.Widget.TabWidget</item>
+        <item name="tabTextColor">@color/tab_selector</item>
+        <item name="tabRippleColor">@color/app_primary</item>
+        <item name="tabUnboundedRipple">true</item>
+    </style>
+
 </resources>
